--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.4.9",
+    "multer": "^1.4.1",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.9"
   }
 }
