--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "basic-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/bootstrap.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon bootstrap.js"
+    "server": "nodemon ./src/bootstrap.js"
   },
   "author": "",
   "license": "ISC",
