--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/bootstrap.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "DEBUG=express:* nodemon ./src/bootstrap.js",
+    "server": "nodemon ./src/bootstrap.js",
+    "server-debug": "DEBUG=express:* nodemon ./src/bootstrap.js",
     "async-test": "node --trace-sync-io ./src/bootstrap.js"
   },
   "author": "",
@@ -16,7 +17,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.9",
     "multer": "^1.4.1",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "morgan": "^1.9.1",
