Configurar Pm2 para rodar  ambiente de desenvolvimento e produção

--- a/.env
+++ b/.env
@@ -1,5 +1,16 @@
+#App config:
+APP_NAME=virtual-library-api
+APP_PORT=3002
+
+# Environment Rules: development, production, test
 NODE_ENV=development
 
+# Debug Rules:
+# https://www.npmjs.com/package/debug
+DEBUG=
+
+
+# Database Rules:
 DB_DBMS=mongodb
 DB_HOST=localhost
 DB_PORT=27017
