--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./src/bootstrap.js",
   "scripts": {
-    "server": "pm2 start ecosystem.config.js",
-    "server-dev": "nodemon ./src/bootstrap.js",
+    "pm2": "pm2 start ecosystem.config.js",
+    "server": "nodemon ./src/bootstrap.js",
     "async-test": "node --trace-sync-io ./src/bootstrap.js"
   },
   "author": "Everton de Paula <evertothepaula@gmail.com>",
@@ -19,6 +19,7 @@
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "passport": "^0.4.0",
     "require-dir": "^1.2.0",
     "winston": "^3.2.1"
   },
